Possible fixes for bad INP number on mobile.

--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -16,7 +16,7 @@
 }
 
 @font-face {
-	font-family: "Acumin Pro Condensed";
+	font-family: "Acumin";
 	src: url("/assets/fonts/AcuminProCond-Semibold.woff2") format("woff2");
 	font-weight: 600; /* Semibold */
 	font-style: normal;
