--- a/src/components/AppDialog/AppDialog.css
+++ b/src/components/AppDialog/AppDialog.css
@@ -139,6 +139,7 @@
 .errorContent__title {
 	color: var(--amber-9);
 	font-family: var(--font-family-geosans);
+	-webkit-text-stroke: 0.8px;
 }
 
 .errorContent__text {
